Closed
Bug 1454785
Opened 4 years ago
Closed 4 years ago
Input fields that are focused via a11y takeFocus don't bring up the Android keyboard
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
mozilla61
Tracking | Status | |
---|---|---|
firefox61 | --- | fixed |
People
(Reporter: eeejay, Assigned: eeejay)
References
(Blocks 1 open bug)
Details
Attachments
(1 file, 1 obsolete file)
4.04 KB,
patch
|
Details | Diff | Splinter Review |
This is because the resulting focus event is seen as a scripted event and not initiated by the user.
Assignee | ||
Comment 1•4 years ago
|
||
Attachment #8968721 -
Flags: review?(surkov.alexander)
Comment 2•4 years ago
|
||
Comment on attachment 8968721 [details] [diff] [review] Make TakeFocus user initiated. r?surkov Review of attachment 8968721 [details] [diff] [review]: ----------------------------------------------------------------- extra f? from Neil on the approach ::: accessible/generic/Accessible.cpp @@ +762,4 @@ > nsFocusManager* fm = nsFocusManager::GetFocusManager(); > + if (fm) { > + AutoHandlingUserInputStatePusher inputStatePusher(true, nullptr, focusContent->OwnerDoc()); > + nsCOMPtr<nsIDOMElement> element(do_QueryInterface(focusContent)); It makes sense to replace nsIDOMElement for focusContent->AsElement() and focusContent->IsElement() assertion. Do you also need to change DocAccessible::TakeFocus version?
Attachment #8968721 -
Flags: review?(surkov.alexander)
Attachment #8968721 -
Flags: review+
Attachment #8968721 -
Flags: feedback?(enndeakin)
Updated•4 years ago
|
Assignee: nobody → eitan
Comment 3•4 years ago
|
||
Comment on attachment 8968721 [details] [diff] [review] Make TakeFocus user initiated. r?surkov I think that is probably ok.
Attachment #8968721 -
Flags: feedback?(enndeakin) → feedback+
Assignee | ||
Comment 4•4 years ago
|
||
(In reply to alexander :surkov from comment #2) > Comment on attachment 8968721 [details] [diff] [review] > Make TakeFocus user initiated. r?surkov > > Review of attachment 8968721 [details] [diff] [review]: > ----------------------------------------------------------------- > > extra f? from Neil on the approach > > ::: accessible/generic/Accessible.cpp > @@ +762,4 @@ > > nsFocusManager* fm = nsFocusManager::GetFocusManager(); > > + if (fm) { > > + AutoHandlingUserInputStatePusher inputStatePusher(true, nullptr, focusContent->OwnerDoc()); > > + nsCOMPtr<nsIDOMElement> element(do_QueryInterface(focusContent)); > > It makes sense to replace nsIDOMElement for focusContent->AsElement() and > focusContent->IsElement() assertion. > > Do you also need to change DocAccessible::TakeFocus version? Not for the IME bug, but I'll change it for consistency.
Comment 5•4 years ago
|
||
(In reply to Eitan Isaacson [:eeejay] from comment #4) > > Do you also need to change DocAccessible::TakeFocus version? > > Not for the IME bug, but I'll change it for consistency. right, you don't need a keyboard for a focused document, and yeah - thanks, consistency is a good thing
Assignee | ||
Comment 6•4 years ago
|
||
Rebased and tweaked test.
Assignee | ||
Updated•4 years ago
|
Attachment #8968721 -
Attachment is obsolete: true
Assignee | ||
Updated•4 years ago
|
Keywords: checkin-needed
Pushed by ebalazs@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/1f335f111475 Make TakeFocus user initiated. r=surkov
Keywords: checkin-needed
Comment 8•4 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/1f335f111475
Status: NEW → RESOLVED
Closed: 4 years ago
status-firefox61:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
You need to log in
before you can comment on or make changes to this bug.
Description
•