Bug 1454785 - Make TakeFocus user initiated. r=surkov

--HG--
extra : rebase_source : 554b1a7dabcdd3f14e67028ad5effc69dabed4b9